--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
+    "export": "next export",
     "start": "next start"
   },
   "dependencies": {
@@ -14,6 +15,7 @@
     "@tsparticles/react": "^3.0.0",
     "d3": "^7.9.0",
     "framer-motion": "^10.18.0",
+    "gh-pages": "^6.3.0",
     "gsap": "^3.14.2",
     "lucide-react": "^0.562.0",
     "motion": "^12.23.26",
